# numint

./: 404.html  CHANGELOG.md  Cargo.toml  README.md  bouncing_ball_example.html  index.html  print.html  searcher-c2a407aa.js  searchindex-f1a0e6f5.js  toc-2ee2fe26.js  toc.html
book/: book.toml
book/src/: SUMMARY.md  bouncing_ball_example.md  introduction.md
resources/: INITIAL_SETUP.md
src/: event.rs  events.rs  integration_methods.rs  integrators.rs  lib.rs  ode_state.rs  propagate.rs  propagate_2.rs  propagate_old.rs  runge_kutta.rs  solution.rs  solve_ivp.rs  state.rs
src/events/: event.rs  event_detection.rs  event_manager.rs  methods.rs
src/integration_methods/: integration_method_trait.rs  runge_kutta.rs
src/integrators/: integrator_trait.rs  runge_kutta.rs
src/ode_state/: dmatrix.rs  dvector.rs  matrix.rs  ode_state_trait.rs  scalar.rs  smatrix.rs  svector.rs  vector.rs
