[package]
name = "numint"
version = "0.1.1"
authors = ["Tamas Kis"]
edition = "2021"
description = "ODE solvers and numerical integration in Rust."
documentation = "https://docs.rs/numint"
repository = "https://github.com/tamaskis/numint"
license = "MIT OR Apache-2.0"

exclude = ["Cargo.lock", ".github/", ".vscode/", ".gitignore"]

[features]
nalgebra = [
    "dep:nalgebra", # enabling nalgebra in this crate
    "linalg-traits/nalgebra" # enabling nalgebra in linalg-traits
]
ndarray = [
    "dep:ndarray", # enabling ndarray in this crate
    "linalg-traits/ndarray" # enabling ndarray in linalg-traits
]

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "src/docs-header.html" ]
features = ["nalgebra", "ndarray"]

[dependencies]
linalg-traits = "0.9.1"
nalgebra = { version = "0.33.0", optional = true }
ndarray = { version = "0.16.0", optional = true }
num-traits = "0.2.19"

[dev-dependencies]
numtest = "0.1.6"