[package]
name = "numint"
version = "0.2.0"
authors = ["Tamas Kis"]
edition = "2024"
description = "ODE solvers and numerical integration in Rust."
documentation = "https://docs.rs/numint"
repository = "https://github.com/tamaskis/numint"
license = "MIT OR Apache-2.0"

exclude = [".gitignore", ".github/", ".vscode/", "Cargo.lock", "book/"]

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "src/docs-header.html" ]
features = ["faer", "nalgebra", "ndarray"]

[features]
faer = [
    "dep:faer", # enabling faer in this crate
    "dep:faer-traits", # enabling faer-traits in this crate
    "linalg-traits/faer", # enabling faer in linalg-traits
    "linalg-traits/faer-traits" # enabling faer-traits in linalg-traits
]
nalgebra = [
    "dep:nalgebra", # enabling nalgebra in this crate
    "linalg-traits/nalgebra" # enabling nalgebra in linalg-traits
]
ndarray = [
    "dep:ndarray", # enabling ndarray in this crate
    "linalg-traits/ndarray" # enabling ndarray in linalg-traits
]

[dependencies]
linalg-traits = "0.14.0"
faer = { version = "0.24.0", optional = true }
faer-traits = { version = "0.24.0", optional = true }
nalgebra = { version = "0.34.1", optional = true }
ndarray = { version = "0.17.2", optional = true }
num-traits = "0.2.19"
rootfinder = "0.5.1"

[dev-dependencies]
numtest = "0.4.1"